tests/integration/targets/playbooks/provision_playbook/enterprise-example.com/platform/keycloak/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tavros
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: tavros
    kubernetes.io/ingress.class: prod
    konghq.com/strip-path: "true"
    konghq.com/protocols: https
    konghq.com/https-redirect-status-code: "302"
spec:
  rules:
    - host: auth.tavros.enterprise-example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak-discovery
                port:
                  number: 8080
  tls:
    - hosts:
        - auth.tavros.enterprise-example.com
      secretName: auth-ingress-cert
